test lsposed feature